--- a/JobSearch/Components/Layout/NavMenu.razor
+++ b/JobSearch/Components/Layout/NavMenu.razor
@@ -31,6 +31,7 @@
 
         <AuthorizeView>
             <Authorized>
+
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="my-offers">
                         <span class="bi bi-briefcase-fill-nav-menu" aria-hidden="true"></span> Moje Oferty
@@ -40,6 +41,12 @@
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="my-applications">
                         <span class="bi bi-file-earmark-text-fill" aria-hidden="true"></span> Moje Aplikacje
+                    </NavLink>
+                </div>
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="chat">
+                        <span class="bi bi-chat-dots-fill-nav-menu" aria-hidden="true"></span> Wiadomości
                     </NavLink>
                 </div>
 
@@ -84,7 +91,6 @@
             <div class="nav-item px-3 mt-4 border-top border-secondary pt-2">
                 <small class="text-muted ms-3 text-uppercase fw-bold" style="font-size: 0.7rem;">Moderacja</small>
             </div>
-
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="/joboffers">
                     <span class="bi bi-briefcase-fill-nav-menu" aria-hidden="true"></span> Zarządzaj Ofertami
