--- a/JobSearch/Components/Pages/Home.razor
+++ b/JobSearch/Components/Pages/Home.razor
@@ -8,6 +8,8 @@
 
 <PageTitle>JobSearch - Znajdź swoją przyszłość</PageTitle>
 
+<h2> Test</h2>
+
 <div class="home-container">
     <div class="container">
 
